--- a/Project/Script/Script.vcxproj
+++ b/Project/Script/Script.vcxproj
@@ -174,8 +174,14 @@ call CodeGen.exe</Command>
   <ItemGroup>
     <ClInclude Include="CCameraMoveScript.h" />
     <ClInclude Include="CCharacterMoveScript.h" />
+    <ClInclude Include="CC_FSMScript.h" />
+    <ClInclude Include="CC_StatesScript.h" />
     <ClInclude Include="CIdleStateScript.h" />
     <ClInclude Include="CPlayerScript.h" />
+    <ClInclude Include="CP_FSMScript.h" />
+    <ClInclude Include="CP_STATEIdleScript.h" />
+    <ClInclude Include="CP_STATEMoveScript.h" />
+    <ClInclude Include="CP_StatesScript.h" />
     <ClInclude Include="CScriptMgr.h" />
     <ClInclude Include="CShoulderViewScript.h" />
     <ClInclude Include="CTestScript.h" />
@@ -187,8 +193,14 @@ call CodeGen.exe</Command>
   <ItemGroup>
     <ClCompile Include="CCameraMoveScript.cpp" />
     <ClCompile Include="CCharacterMoveScript.cpp" />
+    <ClCompile Include="CC_FSMScript.cpp" />
+    <ClCompile Include="CC_StatesScript.cpp" />
     <ClCompile Include="CIdleStateScript.cpp" />
     <ClCompile Include="CPlayerScript.cpp" />
+    <ClCompile Include="CP_FSMScript.cpp" />
+    <ClCompile Include="CP_STATEIdleScript.cpp" />
+    <ClCompile Include="CP_STATEMoveScript.cpp" />
+    <ClCompile Include="CP_StatesScript.cpp" />
     <ClCompile Include="CScriptMgr.cpp" />
     <ClCompile Include="CShoulderViewScript.cpp" />
     <ClCompile Include="CTestScript.cpp" />
