--- a/Project/Script/Script.vcxproj
+++ b/Project/Script/Script.vcxproj
@@ -174,14 +174,13 @@ call CodeGen.exe</Command>
   <ItemGroup>
     <ClInclude Include="CCameraMoveScript.h" />
     <ClInclude Include="CCharacterMoveScript.h" />
-    <ClInclude Include="CGravityScript.h" />
-    <ClInclude Include="CMissileScript.h" />
-    <ClInclude Include="CMonsterScript.h" />
+    <ClInclude Include="CIdleStateScript.h" />
     <ClInclude Include="CPathFinderScript.h" />
-    <ClInclude Include="CPlanetScript.h" />
     <ClInclude Include="CPlayerScript.h" />
+    <ClInclude Include="CPlayerScriptFsm.h" />
     <ClInclude Include="CScriptMgr.h" />
     <ClInclude Include="CShoulderViewScript.h" />
+    <ClInclude Include="CStateScript.h" />
     <ClInclude Include="CTestScript.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="CMonsterMoveScript.h" />
@@ -190,14 +189,13 @@ call CodeGen.exe</Command>
   <ItemGroup>
     <ClCompile Include="CCameraMoveScript.cpp" />
     <ClCompile Include="CCharacterMoveScript.cpp" />
-    <ClCompile Include="CGravityScript.cpp" />
-    <ClCompile Include="CMissileScript.cpp" />
-    <ClCompile Include="CMonsterScript.cpp" />
+    <ClCompile Include="CIdleStateScript.cpp" />
     <ClCompile Include="CPathFinderScript.cpp" />
-    <ClCompile Include="CPlanetScript.cpp" />
     <ClCompile Include="CPlayerScript.cpp" />
+    <ClCompile Include="CPlayerScriptFsm.cpp" />
     <ClCompile Include="CScriptMgr.cpp" />
     <ClCompile Include="CShoulderViewScript.cpp" />
+    <ClCompile Include="CStateScript.cpp" />
     <ClCompile Include="CTestScript.cpp" />
     <ClCompile Include="CMonsterMoveScript.cpp" />
     <ClCompile Include="pch.cpp">
