TempLV, gui ini 파일 ignore 추가

--- a/.gitignore
+++ b/.gitignore
@@ -411,5 +411,6 @@ OutputFile/bin_d/Client.exe
 unity_*
 *.exe
 *.ini
-anjanath/anjanath_body_w_Anim.blend
-anjanath/anjanath_body_w_Anim.fbx
+
+OutputFile/bin/content/Level/Temp.lv
+OutputFile/bin/imgui.ini
