--- a/Project/Script/Script.vcxproj
+++ b/Project/Script/Script.vcxproj
@@ -189,6 +189,7 @@ call CodeGen.exe</Command>
     <ClInclude Include="CPlayerScript.h" />
     <ClInclude Include="CPlayerScriptFsm.h" />
     <ClInclude Include="CP_FSMScript.h" />
+    <ClInclude Include="CP_MouseCtrlScript.h" />
     <ClInclude Include="CP_STATEIdleScript.h" />
     <ClInclude Include="CP_STATEMoveScript.h" />
     <ClInclude Include="CP_StatesScript.h" />
@@ -218,6 +219,7 @@ call CodeGen.exe</Command>
     <ClCompile Include="CPlayerScript.cpp" />
     <ClCompile Include="CPlayerScriptFsm.cpp" />
     <ClCompile Include="CP_FSMScript.cpp" />
+    <ClCompile Include="CP_MouseCtrlScript.cpp" />
     <ClCompile Include="CP_STATEIdleScript.cpp" />
     <ClCompile Include="CP_STATEMoveScript.cpp" />
     <ClCompile Include="CP_StatesScript.cpp" />
