FinalBoneMatrix를 가져왔지만 이게 아닌 것 같음
FinalBoneMatrix 내부에는 위치에 대한 정보가 없음
AnimUpdate.fx에서는 OffsetMat과 BoneFrameMat 을 곱해서
FinalBoneMat에 담아서 반환하니까 그 부분을 수동으로 해야할듯

--- a/Project/Script/Script.vcxproj
+++ b/Project/Script/Script.vcxproj
@@ -197,6 +197,7 @@ call CodeGen.exe</Command>
     <ClInclude Include="CP_STATEIdleScript.h" />
     <ClInclude Include="CP_STATEMoveScript.h" />
     <ClInclude Include="CP_StatesScript.h" />
+    <ClInclude Include="CP_WeaponScript.h" />
     <ClInclude Include="CScriptMgr.h" />
     <ClInclude Include="CShoulderViewScript.h" />
     <ClInclude Include="CStateScript.h" />
@@ -231,6 +232,7 @@ call CodeGen.exe</Command>
     <ClCompile Include="CP_STATEIdleScript.cpp" />
     <ClCompile Include="CP_STATEMoveScript.cpp" />
     <ClCompile Include="CP_StatesScript.cpp" />
+    <ClCompile Include="CP_WeaponScript.cpp" />
     <ClCompile Include="CScriptMgr.cpp" />
     <ClCompile Include="CShoulderViewScript.cpp" />
     <ClCompile Include="CStateScript.cpp" />
