--- a/Project/Script/Script.vcxproj
+++ b/Project/Script/Script.vcxproj
@@ -173,8 +173,12 @@ call CodeGen.exe</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CB_FSMScript.h" />
+    <ClInclude Include="CB_STATEDamagedScript.h" />
+    <ClInclude Include="CB_STATEDeadScript.h" />
+    <ClInclude Include="CB_STATEMeleeScript.h" />
     <ClInclude Include="CB_STATEIdleScript.h" />
     <ClInclude Include="CB_STATEMoveScript.h" />
+    <ClInclude Include="CB_STATERangedScript.h" />
     <ClInclude Include="CB_StateScript.h" />
     <ClInclude Include="CCameraMoveScript.h" />
     <ClInclude Include="CCharacterMoveScript.h" />
@@ -207,8 +211,12 @@ call CodeGen.exe</Command>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CB_FSMScript.cpp" />
+    <ClCompile Include="CB_STATEDamagedScript.cpp" />
+    <ClCompile Include="CB_STATEDeadScript.cpp" />
+    <ClCompile Include="CB_STATEMeleeScript.cpp" />
     <ClCompile Include="CB_STATEIdleScript.cpp" />
     <ClCompile Include="CB_STATEMoveScript.cpp" />
+    <ClCompile Include="CB_STATERangedScript.cpp" />
     <ClCompile Include="CB_StateScript.cpp" />
     <ClCompile Include="CCameraMoveScript.cpp" />
     <ClCompile Include="CCharacterMoveScript.cpp" />
